# Manifold-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bash  GenerateProject.bat  README.MD  premake5.lua
Manifold/src/: Manifold.h  Test.cpp  Test.h
Manifold/src/Manifold/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/src/: Application.cpp  SandboxApp.cpp
